<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Fragment.AddIncidentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/tab2"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewPhoto1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="29dp"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

        <ImageView
            android:id="@+id/imageViewPhoto2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@+id/imageViewPhoto1"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

        <ImageView
            android:id="@+id/imageViewPhoto3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@+id/imageViewPhoto2"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="312dp"
            android:layout_marginRight="312dp"
            android:gravity="center"
            android:text="@string/incident_type"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPhoto1" />

        <Spinner
            android:id="@+id/spinnerIncident"
            android:layout_width="198dp"
            android:layout_height="33dp"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:scrollbarSize="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="312dp"
            android:layout_marginRight="312dp"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/editTextDiscription"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/explain_hint"
            android:inputType="textMultiLine"
            android:textColor="#FFFFFF"
            android:textColorHint="#56FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <ImageView
            android:id="@+id/imageViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/editTextDiscription"
            app:srcCompat="@drawable/locaiton_icon" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:text="PLEASE Chose Your Location!"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/editTextDiscription"
            app:layout_constraintTop_toBottomOf="@+id/editTextDiscription" />

        <Button
            android:id="@+id/buttonReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:width="200dp"
            android:height="50dp"
            android:background="@drawable/button"
            android:fontFamily="@font/regular"
            android:text="@string/report_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewdate"
            app:layout_constraintVertical_bias="0.043"></Button>

        <ImageView
            android:id="@+id/imageViewPhone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/buttonReport"
            app:layout_constraintTop_toBottomOf="@+id/buttonReport"
            app:srcCompat="@drawable/ic_phone_black_24dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="5dp"
            android:text="Call Emergency"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewPhone"
            app:layout_constraintStart_toEndOf="@+id/imageViewPhone" />

        <TextView
            android:id="@+id/textViewdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="272dp"
            android:layout_marginRight="272dp"
            android:text="Date :"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>